SERVER-75792 Fix session handling in movePrimary coordinator